# advanced

fexsica/: .env.example  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  SETUP_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt
fexsica/.github/: copilot-instructions.md
fexsica/.github/workflows/: tests.yml
fexsica/backend/: README.md  app.py  config.py  requirements.txt
fexsica/backend/api/: __init__.py  routes.py  schemas.py
fexsica/backend/engines/: __init__.py  ai_gen_engine.py  deepfake_engine.py  ela_engine.py  fusion_engine.py  geometry_engine.py  illumination_engine.py  metadata_engine.py  noise_engine.py
fexsica/backend/report/: __init__.py  generator.py
fexsica/backend/tests/: conftest.py  test_engines.py
fexsica/backend/utils/: __init__.py  hash_utils.py  image_utils.py  validators.py
fexsica/docs/: ARCHITECTURE.md  PROJECT_STRUCTURE.md
fexsica/fexsics/: __init__.py  __main__.py
fexsica/fexsics/core/: __init__.py  config.py  image_processor.py
fexsica/fexsics/layers/: __init__.py
fexsica/fexsics/layers/bayesian_fusion/: __init__.py  artifact_taxonomy.py  bayesian_fusion.py  justification_generator.py  neuro_symbolic.py
fexsica/fexsics/layers/compression_physics/: __init__.py  blocking_artifacts.py  double_compression.py  error_level_analysis.py  quantization_fingerprint.py
fexsica/fexsics/layers/deep_learning/: __init__.py  cnndetect.py  faceforensics.py  mantranet.py  mvss_net.py
fexsica/fexsics/layers/geometry_perspective/: __init__.py  lens_distortion.py  scale_distance.py  scene_reconstruction.py  vanishing_point.py
fexsica/fexsics/layers/metadata_chain/: __init__.py  exif_validator.py  gps_validator.py  provenance_tracker.py  timestamp_validator.py
fexsica/fexsics/layers/photon_physics/: __init__.py  gradient_field.py  illumination_engine.py  shadow_analyzer.py  specular_analyzer.py
fexsica/fexsics/layers/signal_processing/: __init__.py  dct_analyzer.py  noise_field.py  prnu_analyzer.py  wavelet_analyzer.py
fexsica/fexsics/reports/: __init__.py  forensic_report.py
fexsica/fexsics/utils/: __init__.py  image_utils.py  logger.py  math_utils.py
fexsica/frontend/: api.js  app.js  components.js  index.html  styles.css
fexsica/tests/: conftest.py
fexsica/tests/integration/: test_pipeline.py
fexsica/tests/unit/: test_core.py
